--- a/src/main/resources/assets/steamcraft/lang/zh_CN.lang
+++ b/src/main/resources/assets/steamcraft/lang/zh_CN.lang
@@ -62,7 +62,7 @@ steamcraft.waila.mold=模具:
 
 steamcraft.exosuit.thrustTick=使用推进时每tick消耗
 steamcraft.exosuit.flyTick=每tick飞行消耗
-steamcraft.exosuit.shroud=保护
+steamcraft.exosuit.shroud=末影之幕
 steamcraft.exosuit.level=等级
 
 category.RecentCreations.name=近期作品
