--- a/src/main/resources/assets/steamcraft/lang/zh_CN.lang
+++ b/src/main/resources/assets/steamcraft/lang/zh_CN.lang
@@ -101,6 +101,8 @@ category.MetalCasting.name=金属浇铸
 research.Crucible.name=坩埚
 research.Crucible.0=最终我找到了用各种金属制作合金的方法,用坩埚!<br>使用时,我将陶制坩埚放在炙热的火焰上方.之后就可以投入各种加工过的金属,而不是矿物.
 research.Crucible.1=这种金属会熔为液态,并在条件允许时变为合金.空手右击坩埚会将这些液态金属倒入邻近的模具中.
+research.HellCrucible.name=下界坩埚
+research.HellCrucible.0=有时候在家里倒桶岩浆可不太方便.没关系,我这个新的下界坩埚会利用下界的地狱之力来加热,不需要额外的热量.
 research.Mold.name=模具方块
 research.Mold.0=坩埚有些无用,因为它不能将熔融金属浇铸为可用的型材.那就是该用模具的时候了.<br>只需将一个模具方块紧邻坩埚放置并让它的开口处对准坩埚就可以.
 research.Mold.1=右击会打开或关闭模具方块.持模具右击则会将模具放入模具方块 .shift右击可取出模具.<br>浇铸金属时,先关闭模具再倒入液态金属.之后,打开模具我就取得了铸造好的金属.
@@ -472,6 +474,7 @@ tile.steamcraft:blockZinc.name=锌块
 tile.steamcraft:charger.name=蒸汽充填台
 tile.steamcraft:chargingPad.name=充汽板
 tile.steamcraft:crucible.name=坩埚
+tile.steamcraft:hellCrucible.name=下界坩埚
 tile.steamcraft:mold.name=模具
 tile.steamcraft:pipe.name=管道
 tile.steamcraft:valvePipe.name=阀门管道
