Fixed the rocket lawn chain on SMP, other bugs

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -204,7 +204,7 @@ research.PlateYeti.0=My dangerous treks to the snowy ends of the Twilight Forest
 research.PlateSadist.name=Sadistic Exosuit Plate
 research.PlateSadist.0=Combining a few reinforced slates with a rune of self-sacrifice creates a rather powerful exosuit plate. This plate, when installed, adds a small amount of LP to my network whenever I take damage, rewarding me for pain.
 research.PlateLead.name=Lead Plate
-research.PlateLead.0=Lead is an unusually heavy metal, and while I wouldn't suggest gnawing on it, makes for a good exosuit plating material. Installing lead plates in my exosuit will reduce the knockback that I recieve.
+research.PlateLead.0=Lead is an unusually heavy metal, and while I wouldn't suggest gnawing on it, makes for a good exosuit plating material. Installing lead plates in my exosuit will reduce the knockback that I receive.
 research.PlateVibrant.name=Vibrant Plate
 research.PlateVibrant.0=Although I'm still not entirely sure how it works, I've been able to harness the mysterious ender properties of vibrant alloy for use in my exosuit. When I reach low health, I have a chance to dodge damage and teleport away.
 research.PlateEnderium.name=Enderium Plate
@@ -292,7 +292,7 @@ research.EnhancementSpeedloader.0=I've found a much more efficient way to reload
 research.EnhancementSpeedloader2.name=Bolt Action
 research.EnhancementSpeedloader2.0=I've found a much more efficient way to reload my blunderbuss: the bolt action. Installing this mechanism on my blunderbuss will significantly decrease reload times.
 research.EnhancementRecoil.name=Recoil Pad
-research.EnhancementRecoil.0=A simple recoil pad made of slime can significantly decrease the knockback and recoil I recieve from the blunderbuss, while also increasing accuracy.
+research.EnhancementRecoil.0=A simple recoil pad made of slime can significantly decrease the knockback and recoil I receive from the blunderbuss, while also increasing accuracy.
 research.EnhancementRevolver.name=Revolver Chamber
 research.EnhancementRevolver.0=Installing a revolver chamber in my pistol allows me to shoot six shots before a long reload, albeit with a side effect of decreased damage.
 research.EnhancementSilencer.name=Makeshift Suppressor
