--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -239,6 +239,8 @@ research.Fist.name=Power Fist
 research.Fist.0=This chestpiece upgrade is one of my more fun inventions. It makes my punches pack a real... punch.<br>Any time I punch an enemy with a bare fist they'll go flying, at the cost of some steam.
 research.ExtendoFist.name=Extendo Fist
 research.ExtendoFist.0=I've found a way to augment my reach to far beyond its normal capacity, using a series of jointed bars. I call it the extendo fist. Installing this upgrade in my exosuit will allow me to reach significantly further.
+research.Knuckles.name=Brass Knuckles
+research.Knuckles.0=The Power Fist is alright, but I want something with a little more oomph. Any time I punch an enemy with a bare fist they'll go flying and get a bit of damage done to them, at the cost of some steam.
 research.PitonDeployer.name=Piton Deployer
 research.PitonDeployer.0=This new innovation allows me to get a grip on tricky situations. The piton deployer allows me to grasp walls and ceilings by right clicking, stopping falls and allowing me to dangle and use other items.
 research.FallAssist.name=Fall Assist
@@ -491,6 +493,7 @@ item.steamcraft:stealthUpgrade.name=Acoustic Dampener
 item.steamcraft:canner.name=Canner
 item.steamcraft:pitonDeployer.name=Piton Deployer
 item.steamcraft:enderShroud.name=Ender Shroud
+item.steamcraft:brassKnuckles.name=Brass Knuckles
 
 item.steamcraft:canister.name=Item Canister
 
