Added Natura Integration! For steamed imp, anyway. Can someone test please? My workspace is broken as usual.

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -504,6 +504,7 @@ item.steamcraft:steamedChicken.name=Steamed Chicken
 item.steamcraft:steamedBeef.name=Steamed Beef
 item.steamcraft:steamedFish.name=Steamed Fish
 item.steamcraft:steamedPorkchop.name=Steamed Porkchop
+item.steamcraft:steamedImphide.name=Steamed Imphide
 
 item.toolHead.headAxeBrass.name=Brass Axe Head
 item.toolHead.headPickaxeBrass.name=Brass Pickaxe Head
